# gh615

./: .coverage  .gitignore  pyproject.toml  readme.md  requirements.txt  requirements.txt.bak  setup.cfg  setup.py  sq100.cfg
.github/workflows/: ci.yml
sq100/: arival_sq100.py  cli.py  data_types.py  gpx.py  serial_connection.py  sq100.py  utilities.py
sq100/test/: dummies.py  test_arival_sq100.py  test_cli.py  test_data_types.py  test_gpx.py  test_serial_connection.py  test_utilities.py
